--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/bartender?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
+spring.datasource.url = jdbc:mysql://localhost:3306/bartender?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false&allowPublicKeyRetrieval\=true
 
 # nombre de usuario y contraseña
 spring.datasource.username = pruebas
